--- a/Project.toml
+++ b/Project.toml
@@ -4,16 +4,19 @@ authors = ["Joe Carpinelli <joey@loopy.codes>"]
 version = "0.1.0"
 
 [deps]
+DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+ManifoldDiffEq = "1143c485-9b25-4e23-a65f-701df382ec90"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-julia = "1"
 DocStringExtensions = "0.9"
 Reexport = "1"
 StaticArrays = "^1.6"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
