--- a/Project.toml
+++ b/Project.toml
@@ -4,16 +4,17 @@ authors = ["Joey Carpinelli <joey@loopy.codes>"]
 version = "0.1.0"
 
 [deps]
-DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 DocStringExtensions = "0.9"
 Reexport = "1"
 StaticArrays = "^1.6"
+Roots = "2"
 julia = "1"
 
 [extras]
