--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,8 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 DocStringExtensions = "0.9"
 ModelingToolkit = "8"
 Symbolics = "5"
+Memoize = "^0.4"
+SciMLBase = "^1.97"
 julia = "^1.6"
 
 [extras]
