--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-AstrodynamicalCalculations "0.2"
+AstrodynamicalCalculations = "0.2"
 AstrodynamicalModels = "2"
 DocStringExtensions = "^0.9"
 ModelingToolkit = "^8.69"
