--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ ModelingToolkit = "^8.69"
 OrdinaryDiffEq = "^6.55"
 Reexport = "1"
 StaticArrays = "^1.6"
+julia = "^1.6"
 
 [extras]
 AstrodynamicalCalculations = "c0cf9fb7-f496-4999-a425-c50785d1b88b"
