--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 [compat]
 ArrayInterface = "7"
 AstroTime = "0.7"
-AstrodynamicalModels = "^1.3"
+AstrodynamicalModels = "^1.3, 2"
 Contour = "0.6"
 CoordinateTransformations = "0.6"
 DifferentialEquations = "7"
