--- a/Project.toml
+++ b/Project.toml
@@ -12,23 +12,24 @@ SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
-[compat]
-DocStringExtensions = "0.9"
-Memoize = "0.4"
-ModelingToolkit = "8"
-SciMLBase = "1.97, 2"
-Symbolics = "5"
-julia = "1.6"
-
 [weakdeps]
 SPICEBodies = "19f1efb6-7162-484a-b3a1-b52c391689d7"
 
 [extensions]
 SPICEBodiesExt = "SPICEBodies"
 
+[compat]
+DocStringExtensions = "0.9"
+Memoize = "0.4"
+ModelingToolkit = "8"
+SciMLBase = "1.97, 2"
+StaticArrays = "1"
+Symbolics = "5"
+julia = "1.6"
+
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 SPICEBodies = "19f1efb6-7162-484a-b3a1-b52c391689d7"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
