--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "AstrodynamicalModels"
 uuid = "4282b555-f590-4262-b575-3e516e1493a7"
-authors = ["Joe Carpinelli <jdcarpinelli@gmail.com>"]
+authors = ["Joseph D Carpinelli <joey@loopy.codes>"]
 version = "2.0.0"
 
 [deps]
