--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "AstrodynamicalSolvers"
 uuid = "636ee813-9c9e-4a0a-af07-88b3043dcb77"
 authors = ["Joey Carpinelli <joey@loopy.codes>"]
-version = "0.2.0"
+version = "0.3.0"
 
 [deps]
 AstrodynamicalCalculations = "c0cf9fb7-f496-4999-a425-c50785d1b88b"
@@ -15,6 +15,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 AstrodynamicalCalculations = "0.3"
+AstrodynamicalModels = "3"
 DocStringExtensions = "0.9"
 ModelingToolkit = "8.69"
 OrdinaryDiffEq = "6.55"
