--- a/Project.toml
+++ b/Project.toml
@@ -1,54 +1,20 @@
 name = "GeneralAstrodynamics"
 uuid = "8068df5b-8501-4530-bd82-d24d3c9619db"
-authors = ["Joe Carpinelli <joseph.d.carpinelli@loopy.software>"]
-version = "0.11.0"
+authors = ["Joey Carpinelli <joey@loopy.codes>"]
+version = "1.0.0"
 
 [deps]
-ArrayInterface = "4fba245c-0d91-5ea0-9b3e-6abc04ee57a9"
-AstroTime = "c61b5328-d09d-5e37-a9a8-0eb41c39009c"
+AstrodynamicalCalculations = "c0cf9fb7-f496-4999-a425-c50785d1b88b"
 AstrodynamicalModels = "4282b555-f590-4262-b575-3e516e1493a7"
-Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
-CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
-Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
-Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+AstrodynamicalSolvers = "636ee813-9c9e-4a0a-af07-88b3043dcb77"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
-LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
-ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
-Requires = "ae029012-a4dd-5104-9daa-d747884805df"
-Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
-Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
-StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
-Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
-UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
+SPICE = "5bab7191-041a-5c2e-a744-024b9c3a5062"
+SPICEBodies = "19f1efb6-7162-484a-b3a1-b52c391689d7"
+SPICEKernels = "8e9d28ce-e483-4ef7-bfd9-45b8fef6369c"
 
 [compat]
-ArrayInterface = "7"
-AstroTime = "0.7"
-AstrodynamicalModels = "^1.3, 2, 3"
-Contour = "0.6"
-CoordinateTransformations = "0.6"
-DifferentialEquations = "7"
-DocStringExtensions = "0.9"
-LabelledArrays = "1"
-ModelingToolkit = "8"
-Plots = "1"
-RecipesBase = "1"
-Reexport = "1"
-Requires = "1"
-Roots = "2"
-Rotations = "1"
-StaticArrays = "1"
-SymbolicUtils = "1"
-Unitful = "1"
-UnitfulAstro = "1"
-julia = "1"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
