--- a/Project.toml
+++ b/Project.toml
@@ -13,12 +13,14 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [weakdeps]
+AstrodynamicalCalculations = "c0cf9fb7-f496-4999-a425-c50785d1b88b"
 SPICEBodies = "19f1efb6-7162-484a-b3a1-b52c391689d7"
 
 [extensions]
 SPICEBodiesExt = "SPICEBodies"
 
 [compat]
+AstrodynamicalCalculations = "0.4"
 DocStringExtensions = "0.9"
 Memoize = "0.4"
 ModelingToolkit = "8"
