--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "AstrodynamicalModels"
 uuid = "4282b555-f590-4262-b575-3e516e1493a7"
 authors = ["Joseph D Carpinelli <joey@loopy.codes>"]
-version = "3.2.0"
+version = "3.3.0"
 
 [deps]
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
@@ -18,9 +18,10 @@ SPICEBodies = "19f1efb6-7162-484a-b3a1-b52c391689d7"
 
 [extensions]
 SPICEBodiesExt = "SPICEBodies"
+AstrodynamicalCalculationsExt = "AstrodynamicalCalculations"
 
 [compat]
-AstrodynamicalCalculations = "0.4"
+AstrodynamicalCalculations = "^0.5.1"
 DocStringExtensions = "0.9"
 Memoize = "0.4"
 ModelingToolkit = "8"
