--- a/Project.toml
+++ b/Project.toml
@@ -14,10 +14,10 @@ SPICEBodies = "19f1efb6-7162-484a-b3a1-b52c391689d7"
 SPICEKernels = "8e9d28ce-e483-4ef7-bfd9-45b8fef6369c"
 
 [compat]
-julia = "1.6"
-AstrodynamicalCalculations = "0.3"
-AstrodynamicalModels = "3"
-AstrodynamicalSolvers = "0.2"
+julia = "1.7"
+AstrodynamicalCalculations = "^0.5.1"
+AstrodynamicalModels = "3.4"
+AstrodynamicalSolvers = "0.4"
 DocStringExtensions = "0.9"
 Reexport = "1.2"
 SPICE = "0.2"
