--- a/Project.toml
+++ b/Project.toml
@@ -14,13 +14,13 @@ SPICEBodies = "19f1efb6-7162-484a-b3a1-b52c391689d7"
 SPICEKernels = "8e9d28ce-e483-4ef7-bfd9-45b8fef6369c"
 
 [compat]
-AstrodynamicalCalculations = "^0.5.1"
+AstrodynamicalCalculations = "1"
 AstrodynamicalModels = "3.4"
-AstrodynamicalSolvers = "0.4, 0.5"
+AstrodynamicalSolvers = "1"
 DocStringExtensions = "0.9"
 Reexport = "1.2"
 SPICE = "0.2"
-SPICEBodies = "0.1"
+SPICEBodies = "0.1, 0.2"
 SPICEKernels = "1.2"
 julia = "1.7"
 
