--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -3,4 +3,5 @@ DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 GeneralAstrodynamics = "8068df5b-8501-4530-bd82-d24d3c9619db"
+MultiDocumenter = "87ed4bf0-c935-4a67-83c3-2a03bee4197c"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
