--- a/lib/AstrodynamicalSolvers/Project.toml
+++ b/lib/AstrodynamicalSolvers/Project.toml
@@ -14,8 +14,8 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-AstrodynamicalCalculations = "^0.5.1"
-AstrodynamicalModels = "3.7"
+AstrodynamicalCalculations = "1"
+AstrodynamicalModels = "3.8"
 DocStringExtensions = "0.9"
 ModelingToolkit = "9"
 OrdinaryDiffEq = "6.55"
