--- a/lib/AstrodynamicalCalculations/docs/Project.toml
+++ b/lib/AstrodynamicalCalculations/docs/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+AstrodynamicalCalculations = "c0cf9fb7-f496-4999-a425-c50785d1b88b"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
