--- a/Project.toml
+++ b/Project.toml
@@ -14,9 +14,9 @@ SPICEBodies = "19f1efb6-7162-484a-b3a1-b52c391689d7"
 SPICEKernels = "8e9d28ce-e483-4ef7-bfd9-45b8fef6369c"
 
 [compat]
-AstrodynamicalCalculations = "1"
+AstrodynamicalCalculations = "0.5"
 AstrodynamicalModels = "3.4"
-AstrodynamicalSolvers = "1"
+AstrodynamicalSolvers = "0.5, 1"
 DocStringExtensions = "0.9"
 Reexport = "1.2"
 SPICE = "0.2"
