--- a/lib/AstrodynamicalSolvers/Project.toml
+++ b/lib/AstrodynamicalSolvers/Project.toml
@@ -9,8 +9,9 @@ AstrodynamicalModels = "4282b555-f590-4262-b575-3e516e1493a7"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
-OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+OrdinaryDiffEqVerner = "79d7bb75-1356-48c1-b8c0-6832512096c2"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
@@ -18,8 +19,9 @@ AstrodynamicalCalculations = "1"
 AstrodynamicalModels = "3.8"
 DocStringExtensions = "0.9"
 ModelingToolkit = "9"
-OrdinaryDiffEq = "6.55"
+OrdinaryDiffEqVerner = "1.1.1"
 Reexport = "1"
+SciMLBase = "2.59.2"
 StaticArrays = "1.6"
 julia = "1.7"
 
